# sans-reduction-gui

./: .gitignore  pixi.toml
sans-reduction-gui/: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  build_docs.sh  pyproject.toml
sans-reduction-gui/dockerfiles/: Dockerfile  mantid.local.properties  nginx.conf.template  supervisord.conf
sans-reduction-gui/docs/: conf.py  index.rst
sans-reduction-gui/docs/web/: docusaurus.config.js  package-lock.json
sans-reduction-gui/docs/web/docs/: readme.md
sans-reduction-gui/docs/web/docs/section/: _category_.yml  page1.md  readme.md
sans-reduction-gui/docs/web/src/components/HomepageFeatures/: index.js
sans-reduction-gui/scripts/: generate_static_client.sh  git_utils.py  run_trame.sh  setup_firefox.sh  utils.py  xml_utils.py  xml_utils_prototype.py
sans-reduction-gui/src/biosans/: __init__.py  __main__.py  main.py
sans-reduction-gui/src/biosans/models/: config.py
sans-reduction-gui/src/biosans/views/: main.py  staff_input_tab.py  user_input_tab.py
sans-reduction-gui/src/common/: __init__.py  exceptions.py  mvvm_factory.py
sans-reduction-gui/src/common/models/: __init__.py  config.py  galaxy.py  job.py  local_reduction.py  main.py  oncat.py  reduction_worker.py  stitching.py
sans-reduction-gui/src/common/view_models/: config.py  execution.py  job_outputs.py  job_results.py  main.py  oncat.py  stitching.py
sans-reduction-gui/src/common/views/: advanced_settings_tab.py  execution_panel.py  job_outputs_tab.py  job_results_tab.py  main.py  stitching_tab.py  tab_content_panel.py  tabs_panel.py
sans-reduction-gui/src/common/views/assets/js/: prepare_charts.js
sans-reduction-gui/src/common/views/trame_components/: base.py  errors.py  oncat.py
sans-reduction-gui/src/gpsans/: __init__.py  __main__.py  main.py
sans-reduction-gui/src/gpsans/models/: config.py
sans-reduction-gui/src/gpsans/views/: main.py  staff_input_tab.py  user_input_tab.py
sans-reduction-gui/tests/: conftest.py  test_interfaces.py
sans-reduction-gui/xml/: tool.xml
