[project]
name = "sans-reduction-gui"
version = "1.4.1"
description = "Standalone SANS data reduction GUI for HFIR CG2 (GPSANS) and CG3 (BioSANS)"
authors = [{ name = "Oak Ridge National Laboratory" }]
readme = "README.md"
license = "MIT"
keywords = ["NDIP", "NOVA", "python"]
requires-python = ">=3.10,<3.14"

[tool.pixi.workspace]
channels = ["conda-forge", "mantid", "neutrons"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.environments]
default = {features = ["dev"], solve-group = "default"}
production = {features = [], solve-group = "default"}

[tool.pixi.dependencies]
mantid = "*"
drtsans = "*"
mpld3 = ">=0.5.11"

[tool.pixi.pypi-dependencies]
sans-reduction-gui = { path = ".", editable = true }
hatch = "*"
altair = "<5.3.0"
trame = ">=3.5.1,<4"
trame-datagrid = ">=0.2.2,<1"
trame-vega = ">=2.1.1,<3"
trame-vuetify = ">=3.0.1,<4"
trame-vtk = ">=2.8.0,<3"
numpy = ">=2.0.0,<3"
trame-plotly = ">=3.0.2,<4"
plotly = ">=6.3.1,<7"
plotly-resampler = ">=0.10.0,<1"
matplotlib = ">=3.8.2,<4"
pyoncat = ">=2.0,<3"
oauthlib = ">=3.2.2,<4"
requests-oauthlib = ">=2.0.0,<3"
pywebview = ">=4.4.1,<5"
nova-common = "*"
nova-trame = "<1.4.0"
nova-mvvm = "<0.15.0"
python-dotenv = "*"

[tool.pixi.feature.dev.dependencies]
docutils = ">=0.21.0,<0.22"

[tool.pixi.feature.dev.pypi-dependencies]
sans-reduction-gui = { path = ".", editable = true }
hatch = "*"
mypy = ">=1.10.0"
pre-commit = ">=2.20.0"
coverage = ">=6.4.3"
pytest = "*"
ruff = "==0.6.2"
copier = ">=9.3"
sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-napoleon = "*"
selenium = "*"
gitpython = ">=3.1.40,<4"
python-gitlab = ">=5.6.0,<6"

[tool.pixi.tasks]
biosans = "python -m src.biosans"
gpsans = "python -m src.gpsans"
init-repo = "python -m scripts.git_utils"
deploy-production = "python -m scripts.xml_utils"
deploy-prototype = "python -m scripts.xml_utils_prototype"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biosans", "src/common", "src/gpsans"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__"]

[tool.ruff]
extend-exclude = [".pixi"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "D102", # Missing docstring in public function
    "D103", # Missing docstring in public method
    "D401"  # imperative mood

]

[tool.ruff.lint.extend-per-file-ignores]
'__init__.py' = ['D104'] # Missing docstring in public package

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
disable_error_code = ["import-untyped"]
plugins = ["pydantic.mypy"]
# You can exclude files with the following (ONLY WHEN NECESSARY)
# exclude = ["path/to/file"]

[tool.coverage.report]
omit = [
    '*__init__*', # __init__ files should just re-export other classes and functions
]

[tool.coverage.run]
command_line = "-m pytest --junit-xml=reports/junit.xml"
data_file = "reports/.coverage"
